--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -52,7 +52,7 @@
         text-align: center;
     
         &--active {
-            font-weight: 700;
+            font-weight: 500;
             border-bottom: 3px solid $primary-color3;
             padding-bottom: 1rem;
         }
